gitops/platform-apps/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`audiobookshelf.__ZONE_NAME__`)
      services:
        - kind: Service
          name: audiobookshelf
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-netbird
  namespace: audiobookshelf
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`audiobookshelf.__ZONE_NAME__`)
      services:
        - kind: Service
          name: audiobookshelf
          port: 80
